--- a/demos/gr/hindi/Speech_ASR_plus_Translation_Hindi.ipynb
+++ b/demos/gr/hindi/Speech_ASR_plus_Translation_Hindi.ipynb
@@ -6,7 +6,7 @@
       "name": "Speech_Translation_Hindi",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMhWVrl7kwxotKzN82ZgLnB",
+      "authorship_tag": "ABX9TyMd3gN5x6owrOjx0Wqs2ZZl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -40,7 +40,7 @@
         "!apt-get install sox\n",
         "!pip install sentencepiece"
       ],
-      "execution_count": 2,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -53,10 +53,9 @@
         "\n",
         "model_translate = M2M100ForConditionalGeneration.from_pretrained(\"facebook/m2m100_418M\")\n",
         "tokenizer_translate = M2M100Tokenizer.from_pretrained(\"facebook/m2m100_418M\")\n",
-        "tokenizer_translate.src_lang = inlang\n",
         "inlang='hi'\n",
         "outlang='en'\n",
-        "\n",
+        "tokenizer_translate.src_lang = inlang\n",
         "\n",
         "def translate(text):    \n",
         "\n",
@@ -64,7 +63,7 @@
         "    generated_tokens = model_translate.generate(**encoded_hi, forced_bos_token_id=tokenizer_translate.get_lang_id(outlang))\n",
         "    return tokenizer_translate.batch_decode(generated_tokens, skip_special_tokens=True)[0]\n"
       ],
-      "execution_count": 13,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -115,7 +114,7 @@
         "    return transcription, translate(transcription)\n",
         "    #return transcription"
       ],
-      "execution_count": 14,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -126,7 +125,7 @@
       "source": [
         "from gradio.mix import Parallel, Series"
       ],
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -136,7 +135,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hMKzhMRVCkJd",
-        "outputId": "17a0b339-d57b-49e2-d54e-209401b50657"
+        "outputId": "264713ad-16a5-486e-8fa9-514523e165f3"
       },
       "source": [
         "input = gr.inputs.Audio(source=\"microphone\", type=\"file\", label=\"Please speak into the microphone\") \n",
@@ -149,19 +148,33 @@
         "                                                                            theme='huggingface',\n",
         "                                                                            layout='vertical',\n",
         "                                                                            title=\"Vakyansh: Speech To text for Indic Languages\",\n",
-        "                                                                            description=\"This is a live demo for Speech to Text and Speech Translation. <br> Models used: wav2vec2 + m2m100\").launch(debug=True, inline=False)"
+        "                                                                            description=\"This is a live demo for Speech to Text and Speech Translation. <br> Models used: wav2vec2 + m2m100\").launch( inline=False)"
       ],
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Colab notebook detected. This cell will run indefinitely so that you can see errors and logs. To turn off, set debug=False in launch().\n",
+            "Colab notebook detected. To show errors in colab notebook, set `debug=True` in `launch()`\n",
             "Your interface requires microphone or webcam permissions - this may cause issues in Colab. Use the External URL in case of issues.\n",
             "This share link will expire in 24 hours. If you need a permanent link, visit: https://gradio.app/introducing-hosted (NEW!)\n",
-            "Running on External URL: https://34529.gradio.app\n"
+            "Running on External URL: https://56367.gradio.app\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(<Flask 'gradio.networking'>,\n",
+              " 'http://127.0.0.1:7861/',\n",
+              " 'https://56367.gradio.app')"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 10
         }
       ]
     },
